module/deprecated/diagnostics_tools/tests/inc/snipet/cta_type_same_align_fail.stderr
error[E0308]: mismatched types
 --> tests/inc/snipet/cta_type_same_align_fail.rs:7:3
  |
7 |   cta_type_same_align!( Int, i16 );
  |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |   |
  |   expected an array with a size of 128, found one with a size of 2
  |   expected due to this
  |
  = note: this error originates in the macro `cta_type_same_align` (in Nightly builds, run with -Z macro-backtrace for more info)
